--- a/src/components/ImageGrid/ImageGrid.module.scss
+++ b/src/components/ImageGrid/ImageGrid.module.scss
@@ -33,6 +33,7 @@
 .ImageGrid__image {
   width: 32%;
   margin: 0 5px;
+  align-self: center;
   &:first-child {
     margin-left: 0;
   }
